GCD 4.0.7 (26/10/20)
-----------------------------------------

* Sites added 
1182	Djamila
1183	Ait Ichou
1184	Burullus Lagoon
1185	Princessvlei
1186	Lake Ngami
1191	Sainte-Luce
1193	Mandena
1194	Mandena forest
1201	Yak2-A
1202	Yak2-B
1203	Yak3-A
1204	Yak3-B
1205	Lake Gaye
1207	Lake Gwendolyn
1208	Lake Nancy
1209	Lake Vera
1210	Lake Osborne
1211	Lake Julia
1212	Square Tarn
1213	Hartz Lake
1214	Owen Tarn
1215	Lake Isla 
1216	Lake Rolleston
1217	Basin Lake TAS
1219	Sangha River
1227	Vankervelsvlei
1228	Lake Edward
1229	Rietvlei-Still Bay
1230	Eilandvlei
1231	Malahlapanga
1232	Lake Ngofouo
1233	Dead Sea
1238	Emile_Lake
1239	Izaac_Lake
1240	Paradis_Lake
1241	Saxon_Lake

GCD 4.0.6 (14/02/20)
-----------------------------------------

* Minor update: package raster declared in imports for R compatibility


GCD 4.0.5 (08/10/19)
-----------------------------------------

* Sites removed
"119"  "Lago Dell'Accesa"    
"129"  "Rucanancu"           
"420"  "ODP-1144"            
"667"  "Cederberg Pakhuisch" 
"835"  "Azzano Decimo part 1"
"836"  "Azzano Decimo part 2"
"837"  "Azzano Decimo part 3"
"1106" "Besancon TEST"       
"1155" "testNairobi"     
 
* Sites added:
"1168" "Lake Sidi Ali"          
"1169" "Lac Geai SBL"           
"1174" "La Laguna"              
"1175" "Laguna Grande"          
"1176" "Laguna de Valleseco"    
"1177" "Lac a Jean-Marie Boulay"
"1178" "Lac Bride"              
"1180" "Garba Guracha"      

* Added dataset about dating
date.rda -> dating information (age, depths, etc.)
date_type.rda -> code on date type (14C, tephra, etc.)
mat_dated.rda -> material dated


GCD 4.0.4 (23/11/18)
-----------------------------------------

* 0 "QUANTITY" charcoal values are stored as NULL in the SQL database and were dropped in previous GCD package versions !!PLEASE UPDATE!!
  Only affects older GCD 4.x.x versions

* 3 sites added


GCD 4.0.3 (20/08/18)
-----------------------------------------
